adicionando descrições e links de projetos

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
     <main class="main">
         <!--==================== HOME ====================-->
         <section class="home section background__image" id="home">
-            
+
             <div class="home__container container grid ">
                 <div class="home__content">
-                    <div class="home__data " >
+                    <div class="home__data ">
                         <h3 class="home__subtitle">
                             Olá, <span>me chamo</span>
                         </h3>
@@ -77,7 +77,8 @@
                             Desenvolvedor FullStack
                         </h3>
                         <p class="home__description">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia quidem officia nulla? Cupiditate!
+                            Tenho me dedicado ao desenvolvimento FullStack, aprimorando habilidades em HTML,CSS,
+                            JavaScript e BootStrap, buscando criar experiências web cativantes e funcionais.
                         </p>
                         <a href="#contact" class="button"> Vamos conversar! </a>
                     </div>
@@ -101,8 +102,8 @@
                     </div>
                 </div>
                 <div class="home__image home__blob">
-                
-                  <img src="assets/img/programming.png" alt="Imagem de pessoa com computador">
+
+                    <img src="assets/img/programming.png" alt="Imagem de pessoa com computador">
 
                 </div>
             </div>
@@ -120,9 +121,26 @@
                         Sobre
                     </h2>
                     <p class="about__description">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni distinctio enim mollitia ipsum
-                        eligendi, expedita esse quae nobis vitae omnis eaque ullam fugiat nemo illum. Ea animi ipsum
-                        eligendi ducimus?
+
+                        Sou entusiasta da programação, e fico fascinado como a tecnologia impacta positivamente nosso
+                        cotidiano. 💜🚀
+                        <br>
+                        <br>
+                        Estou em transição de carreira da área de Licenciatura em Física e atualmente estou dedicado a
+                        me tornar um
+                        Desenvolvedor FullStack, aprofundando meus conhecimentos nas seguintes tecnologias:
+                        <br>
+                        <br>
+                        Minha paixão pela música permite me conectar emocionalmente com as pessoas, expressando-me
+                        através de ritmos e melodias.
+                        Também sou encantado por idiomas, pois adoro explorar diferentes culturas e expandir meus
+                        horizontes por meio do aprendizado de novas línguas.
+                        <br>
+                        <br>
+                        Buscando frequentemente o desenvolvimento pessoal e profissional, além de uma conexão
+                        equilibrada entre a mente e o
+                        corpo.
+
                     </p>
                     <a href="#contact" class="button">
                         Entre em contato
@@ -145,9 +163,7 @@
                         Minhas Skills
                     </h2>
                     <p class="skills__description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus quam dolore blanditiis eum,
-                        sed maiores perferendis fuga nesciunt commodi voluptates sit nam veritatis vitae praesentium
-                        accusamus esse perspiciatis iure repudiandae?
+                        Veja quais habilidades eu possuo e atuo, para desenvolver meus projetos.
                     </p>
                     <a href="#projects" class="button">Visualizar projetos</a>
                 </div>
@@ -189,7 +205,7 @@
                         <h2 class="projects__title">
                             Moderno website
                         </h2>
-                        <a href="#" class="projects__button">
+                        <a href="https://lsmachado4.github.io/ShowMusic/" target="_blank" class="projects__button">
                             View demo <i class="ri-external-link-line"></i>
                         </a>
 
@@ -206,7 +222,8 @@
                         <h2 class="projects__title">
                             Moderno website
                         </h2>
-                        <a href="#" class="projects__button">
+                        <a href="https://lsmachado4.github.io/LandingPage-XMen/" target="_blank"
+                            class="projects__button">
                             View demo <i class="ri-external-link-line"></i>
                         </a>
 
@@ -223,7 +240,8 @@
                         <h2 class="projects__title">
                             Moderno website
                         </h2>
-                        <a href="#" class="projects__button">
+                        <a href="https://lsmachado4.github.io/Desafio-Trilhas-Desenvolve2023/" target="_blank"
+                            class="projects__button">
                             View demo <i class="ri-external-link-line"></i>
                         </a>
 
@@ -240,7 +258,7 @@
                         <h2 class="projects__title">
                             Moderno website
                         </h2>
-                        <a href="#" class="projects__button">
+                        <a href="https://lsmachado4.github.io/Shopping-Cart/" target="_blank" class="projects__button">
                             View demo <i class="ri-external-link-line"></i>
                         </a>
 
@@ -257,7 +275,7 @@
                         <h2 class="projects__title">
                             Moderno website
                         </h2>
-                        <a href="#" class="projects__button">
+                        <a href="https://github.com/lsmachado4/Consumindo-API" target="_blank" class="projects__button">
                             View demo <i class="ri-external-link-line"></i>
                         </a>
 
@@ -274,7 +292,8 @@
                         <h2 class="projects__title">
                             Moderno website
                         </h2>
-                        <a href="#" class="projects__button">
+                        <a href="https://github.com/lsmachado4/Crud-ApiRest-Rocketseat" target="_blank"
+                            class="projects__button">
                             View demo <i class="ri-external-link-line"></i>
                         </a>
 
@@ -301,21 +320,22 @@
 
                 <div>
 
-                    <form action="https://formsubmit.co/machado051@gmail.com" method="post" class="contact__form" id="contact-form" target="_blank" autocomplete="off">
+                    <form action="https://formsubmit.co/machado051@gmail.com" method="post" class="contact__form"
+                        id="contact-form" target="_blank" autocomplete="off">
 
                         <div class="contact__group">
 
                             <input type="text" name="user_name" required placeholder="Digite seu nome"
-                                class="contact__input" >
+                                class="contact__input">
 
                             <input type="email" name="user_email" required placeholder="Digite seu email"
-                                class="contact__input" autocomplete="off" >
+                                class="contact__input" autocomplete="off">
                         </div>
 
                         <textarea name="user_project" required placeholder="Digite sua mensagem..."
                             class="contact__input"></textarea>
                         <p class="contact__message" id="contact-message"></p>
-                        <button type="submit"  class="button contact__button">
+                        <button type="submit" class="button contact__button">
                             Enviar Mensagem
                         </button>
                     </form>
