--- a/index.html
+++ b/index.html
@@ -62,52 +62,55 @@
     <!--==================== MAIN ====================-->
     <main class="main">
         <!--==================== HOME ====================-->
-        <section class="home section background__image" id="home">
+        <section class="home section background__image " id="home">
+            
 
-            <div class="home__container container grid ">
-                <div class="home__content">
-                    <div class="home__data ">
-                        <h3 class="home__subtitle">
-                            Olá, <span>me chamo</span>
-                        </h3>
-                        <h1 class="home__title">
-                            Lucas Machado
-                        </h1>
-                        <h3 class="home__education">
-                            Desenvolvedor FullStack
-                        </h3>
-                        <p class="home__description">
-                            Tenho me dedicado ao desenvolvimento FullStack, aprimorando habilidades em HTML,CSS,
-                            JavaScript e BootStrap, buscando criar experiências web cativantes e funcionais.
-                        </p>
-                        <a href="#contact" class="button"> Vamos conversar! </a>
+            <div class="stars"></div>
+            <div class="stars2"></div>
+            <div class="stars3"></div>
+                <div class="home__container container grid ">
+                    <div class="home__content">
+                        <div class="home__data ">
+                            <h3 class="home__subtitle">
+                                Olá, <span>me chamo</span>
+                            </h3>
+                            <h1 class="home__title">
+                                Lucas Machado
+                            </h1>
+                            <h3 class="home__education">
+                                Desenvolvedor FullStack
+                            </h3>
+                            <p class="home__description">
+                                Tenho me dedicado ao desenvolvimento FullStack, aprimorando habilidades em HTML,CSS,
+                                JavaScript e BootStrap, buscando criar experiências web cativantes e funcionais.
+                            </p>
+                            <a href="#contact" class="button"> Vamos conversar! </a>
+                        </div>
+                        <div class="home__social">
+
+                            <a href="https://www.linkedin.com/in/lucassmachadodev/" target="_blank"
+                                class="home__social-link">
+                                <i class="ri-linkedin-box-line"></i>
+                            </a>
+                            <a href="https://github.com/lsmachado4" target="_blank" class="home__social-link">
+                                <i class="ri-github-fill"></i>
+                            </a>
+                            <a href="#contact-form" class="home__social-link">
+                                <i class="ri-mail-line"></i>
+                            </a>
+
+                            <a href="https://api.whatsapp.com/send?phone=5575991673148" target="_blank"
+                                class="home__social-link">
+                                <i class="ri-whatsapp-line"></i>
+                            </a>
+                        </div>
                     </div>
-                    <div class="home__social">
+                    <div class="home__image home__blob">
 
-                        <a href="https://www.linkedin.com/in/lucassmachadodev/" target="_blank"
-                            class="home__social-link">
-                            <i class="ri-linkedin-box-line"></i>
-                        </a>
-                        <a href="https://github.com/lsmachado4" target="_blank" class="home__social-link">
-                            <i class="ri-github-fill"></i>
-                        </a>
-                        <a href="#contact-form" class="home__social-link">
-                            <i class="ri-mail-line"></i>
-                        </a>
+                        <img src="assets/img/programming.png" alt="Imagem de pessoa com computador">
 
-                        <a href="https://api.whatsapp.com/send?phone=5575991673148" target="_blank"
-                            class="home__social-link">
-                            <i class="ri-whatsapp-line"></i>
-                        </a>
                     </div>
                 </div>
-                <div class="home__image home__blob">
-
-                    <img src="assets/img/programming.png" alt="Imagem de pessoa com computador">
-
-                </div>
-            </div>
-
         </section>
 
         <!--==================== ABOUT ====================-->
@@ -372,7 +375,7 @@
 
                 </a>
             </div>
-           
+
         </div>
 
     </footer>
