alteração da descrição

--- a/index.html
+++ b/index.html
@@ -125,16 +125,16 @@
                     </h2>
                     <p class="about__description">
 
-                        Sou entusiasta da programação, e fico fascinado como a tecnologia impacta positivamente nosso
+                        Sou entusiasta da programação e fico fascinado como a tecnologia impacta positivamente nosso
                         cotidiano. 💜🚀
                         <br>
                         <br>
-                        Estou em transição de carreira da área de Licenciatura em Física e atualmente estou dedicado a
+                        Estou em transição de carreira da área de Licenciatura em Física e, atualmente, estou dedicado a
                         me tornar um
                         Desenvolvedor FullStack, aprofundando meus conhecimentos nas seguintes tecnologias:
                         <br>
                         <br>
-                        Minha paixão pela música permite me conectar emocionalmente com as pessoas, expressando-me
+                        Minha paixão pela música me permite conectar emocionalmente com as pessoas, expressando-me
                         através de ritmos e melodias.
                         Também sou encantado por idiomas, pois adoro explorar diferentes culturas e expandir meus
                         horizontes por meio do aprendizado de novas línguas.
